--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ transition: background 0.2s, color 0.2s, box-shadow 0.1s;}
   backdrop-filter: blur(50%);
 }
 
-.honmepage-btn:hover,
+.homepage-btn:hover,
 .homepage-btn:focus {
   background-color: rgba(255, 255, 255, 0.1);
   color: #fff;
